--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 marshmallow==3.19.0
+marshmallow-sqlalchemy==0.28.1
 mypy-extensions==0.4.3
 packaging==23.0
 pathspec==0.11.0
