--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,26 @@
+attrs==22.2.0
 black==22.12.0
 click==8.1.3
+flasgger==0.9.5
 Flask==2.2.2
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.17.3
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.28.1
+mistune==2.0.4
 mypy-extensions==0.4.3
 packaging==23.0
 pathspec==0.11.0
 platformdirs==2.6.2
 psycopg2==2.9.5
+pyrsistent==0.19.3
 python-dotenv==0.21.1
+PyYAML==6.0
 six==1.16.0
 SQLAlchemy==2.0.0
 tomli==2.0.1
